# niri-burst-consume

./: Cargo.toml  README.md  flake.nix
src/: main.rs
