[package]
name = "niri-burst-consume"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
niri-ipc = "25.11.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["net", "io-util", "rt", "macros"] }
tokio-stream = "0.1.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = "z"         # Optimize for size (less code = less CPU cache pressure)
lto = true              # Link-time optimization for better inlining
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Remove debug symbols
panic = "abort"         # Smaller binary, no unwinding tables
